--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -55,7 +55,9 @@
             </li>
         </ul>
     </footer>
-<!--<script src="cordova.js"></script> -->
-    <script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
+    <script src="cordova.js"></script>
+    <script src="scripts/jquery-2.1.4.min.js"></script>
+    <script src="scripts/jquery.mobile.min.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
