--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -29,7 +29,7 @@
         <div>
             <div class="input-box">
                 <textarea rows="2" placeholder="Where is the money?"></textarea>
-                <span><i class="fa fa-paper-plane"></i></span>
+                <span class="submit-btn"><i class="fa fa-paper-plane"></i></span>
             </div>
         </div>
     </main>
@@ -58,6 +58,13 @@
     <script src="cordova.js"></script>
     <script src="scripts/jquery-2.1.4.min.js"></script>
     <script src="scripts/jquery.mobile.min.js"></script>
+    <script src="scripts/pouchdb-4.0.3.min.js"></script>
+    <script src="scripts/pouchdb.localstorage.min.js"></script>
+    <script src="scripts/db.js"></script>
+    <script src="scripts/edit_distance.js"></script>
+    <script src="scripts/templates.js"></script>
+    <script src="scripts/handlers.js"></script>
+    <script src="scripts/parse.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
