--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -63,6 +63,7 @@
     <script src="scripts/db.js"></script>
     <script src="scripts/edit_distance.js"></script>
     <script src="scripts/templates.js"></script>
+    <script src="scripts/sms_templates.js"></script>
     <script src="scripts/handlers.js"></script>
     <script src="scripts/parse.js"></script>
     <script src="scripts/index.js"></script>
