Charts, not tested

--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -94,8 +94,13 @@
                 </div>
             </div>
         </section>
-        <section id="stats" style="display: none;">
-            <h1>Stats</h1>
+        <section id="stats1" style="display: none;">
+            <h1>Daily</h1>
+            <canvas id="myChart" width="400" height="400"></canvas>
+        </section>
+        <section id="stats2" style="display: none;">
+            <h1>Category</h1>
+            <canvas id="myChart2" width="400" height="400"></canvas>
         </section>
     </main>
     <footer>
@@ -131,6 +136,8 @@
     <script src="scripts/sms_templates.js"></script>
     <script src="scripts/handlers.js"></script>
     <script src="scripts/parse.js"></script>
+    <script src="scripts/Chart.js/Chart.js"></script>
+    <script src="scripts/charts.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
