Fix some syntax errors, still doesn't work :P

--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -116,7 +116,7 @@
                 </a>
             </li>
             <li>
-                <a href="#stats">
+                <a href="#stats2">
                     <i class="fa fa-bar-chart"></i>
                     <p>Stats</p>
                 </a>
