--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap-3.3.5-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-3.3.5-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 <body>
@@ -97,6 +98,12 @@
         <section id="stats" style="display: none;">
             <h1>Stats</h1>
         </section>
+        <section id="list" style="display: none;">
+            <div class="list-group">
+                <div class="row"> <div class="col-xs-4">Account</div> <div class="col-xs-4">Amount</div> <div class="col-xs-4">Category</div></div>
+
+            </div>
+        </section>
     </main>
     <footer>
         <ul>
@@ -116,6 +123,12 @@
                 <a href="#stats">
                     <i class="fa fa-bar-chart"></i>
                     <p>Stats</p>
+                </a>
+            </li>
+            <li>
+                <a href="#list" class="listBtn">
+                    <i class="fa fa-bar-chart"></i>
+                    <p>Expenses</p>
                 </a>
             </li>
         </ul>
