--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -134,6 +134,18 @@
                     <p>Expenses</p>
                 </a>
             </li>
+            <li>
+                <a href="#list" class="settleBtn">
+                    <i class="fa fa-bar-chart"></i>
+                    <p>Settlements</p>
+                </a>
+            </li>
+            <li>
+                <a href="#list" class="incBtn">
+                    <i class="fa fa-bar-chart"></i>
+                    <p>Income</p>
+                </a>
+            </li>
         </ul>
     </footer>
     <script src="cordova.js"></script>
