--- a/Accountable/Accountable/www/index.html
+++ b/Accountable/Accountable/www/index.html
@@ -18,8 +18,8 @@
 </head>
 <body>
     <header>
-        <p class="pre-heading">Welcome to</p>
         <h1>Accountable</h1>
+        <p class="pre-heading">We are responsible for your accounts</p>
         <hr />
     </header>
     <main>
@@ -93,18 +93,56 @@
                 </div>
             </form>
         </section>
+        <section id="add-bill-expense" style="display: none;">
+            <h2 class="text-center">Add Expense</h2>
+            <form>
+                <p>
+                    <label>Category</label>
+                    <select name="cat" class="cat form-control"></select>
+                </p>
+                <p>
+                    <label>Item</label>
+                    <input type="text" name="item" class="form-control"/>
+                </p>
+                <p>
+                    <label>Date</label>
+                    <input type="date" name="date" placeholder="YYYY-MM-DD" class="form-control" />
+                </p>
+                <p>
+                    <label>Amount</label>
+                    <input type="number" name="amount" class="form-control" />
+                </p>
+                <p>
+                    <label>Account</label>
+                    <select name="account" class="account form-control"></select>
+                </p>
+                <div class="row">
+                    <div class="col-xs-6">
+                        <button type="submit" class="btn btn-success form-control">Save</button>
+                    </div>
+                    <div class="col-xs-6">
+                        <button type="reset" class="btn btn-danger form-control">Reset</button>
+                    </div>
+                </div>
+            </form>
+        </section>
         <section id="stats1" style="display: none;">
             <h1>Daily</h1>
-            <canvas id="myChart" width="400" height="400"></canvas>
+            <div class="container text-center">
+                <canvas id="myChart" width="300" height="300"></canvas>
+            </div>
         </section>
         <section id="stats2" style="display: none;">
             <h1>Category</h1>
-            <canvas id="myChart2" width="400" height="400"></canvas>
-        </section>
+            <div class="container text-center">
+                <canvas id="myChart2" width="300" height="300"></canvas>
+            </div>
+            </section>
         <section id="list" style="display: none;">
-            <div class="list-group">
-                <div class="row"> <div class="col-xs-4">Account</div> <div class="col-xs-4">Amount</div> <div class="col-xs-4">Category</div></div>
-
+            <div class="container">
+                <div class="list-group">
+                    <div class="row"> <div class="col-xs-4">Account</div> <div class="col-xs-4">Amount</div> <div class="col-xs-4">Category</div></div>
+                </div>
             </div>
         </section>
     </main>
